[package]
name = "ISBN9784065128442"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio="*"
itertools = "*"

[[bin]]
name="code_2-1"
path="src/code_2-1.rs"

[[bin]]
name="code_2-2"
path="src/code_2-2.rs"

[[bin]]
name="code_2-3"
path="src/code_2-3.rs"

[[bin]]
name="code_2-4"
path="src/code_2-4.rs"

[[bin]]
name="code_3-1"
path="src/code_3-1.rs"

[[bin]]
name="code_3-2"
path="src/code_3-2.rs"