[package]
name = "ISBN9784065128442"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio="*"
itertools = "*"
superslice = "*"

[[bin]]
name="code_2-1"
path="src/code_2-1.rs"

[[bin]]
name="code_2-2"
path="src/code_2-2.rs"

[[bin]]
name="code_2-3"
path="src/code_2-3.rs"

[[bin]]
name="code_2-4"
path="src/code_2-4.rs"

[[bin]]
name="code_3-1"
path="src/code_3-1.rs"

[[bin]]
name="code_3-2"
path="src/code_3-2.rs"

[[bin]]
name="code_3-3"
path="src/code_3-3.rs"

[[bin]]
name="code_3-4"
path="src/code_3-4.rs"

[[bin]]
name="code_3-6"
path="src/code_3-6.rs"

[[bin]]
name="code_4-2"
path="src/code_4-2.rs"

[[bin]]
name="code_4-4"
path="src/code_4-4.rs"

[[bin]]
name="code_4-6"
path="src/code_4-6.rs"

[[bin]]
name="code_4-7"
path="src/code_4-7.rs"

[[bin]]
name="code_4-8"
path="src/code_4-8.rs"

[[bin]]
name="code_4-9"
path="src/code_4-9.rs"

[[bin]]
name="code_5-1"
path="src/code_5-1.rs"

[[bin]]
name="code_5-3"
path="src/code_5-3.rs"

[[bin]]
name="code_5-4"
path="src/code_5-4.rs"

[[bin]]
name="code_5-6"
path="src/code_5-6.rs"

[[bin]]
name="code_5-7"
path="src/code_5-7.rs"

[[bin]]
name="code_5-8"
path="src/code_5-8.rs"

[[bin]]
name="code_5-9"
path="src/code_5-9.rs"

[[bin]]
name="code_6-1"
path="src/code_6-1.rs"

[[bin]]
name="code_6-3"
path="src/code_6-3.rs"

[[bin]]
name="code_6-4"
path="src/code_6-4.rs"

[[bin]]
name="code_6-5"
path="src/code_6-5.rs"

[[bin]]
name="code_7-1"
path="src/code_7-1.rs"

[[bin]]
name="code_7-2"
path="src/code_7-2.rs"

[[bin]]
name="code_7-3"
path="src/code_7-3.rs"

[[bin]]
name="code_8-1"
path="src/code_8-1.rs"

[[bin]]
name="code_8-4"
path="src/code_8-4.rs"

[[bin]]
name="code_8-5"
path="src/code_8-5.rs"

[[bin]]
name="code_9-1"
path="src/code_9-1.rs"

[[bin]]
name="code_9-2"
path="src/code_9-2.rs"

[[bin]]
name="code_10-3"
path="src/code_10-3.rs"

[[bin]]
name="code_10-4"
path="src/code_10-4.rs"

[[bin]]
name="code_10-5"
path="src/code_10-5.rs"

[[bin]]
name="code_11-3"
path="src/code_11-3.rs"

[[bin]]
name="code_11-4"
path="src/code_11-4.rs"

[[bin]]
name="code_12-1"
path="src/code_12-1.rs"

[[bin]]
name="code_12-2"
path="src/code_12-2.rs"

[[bin]]
name="code_12-3"
path="src/code_12-3.rs"
